--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -135,9 +135,9 @@ import "bootstrap/dist/css/bootstrap.css";
           <div class="card w-75 mb-5">
             <div class="w-100 d-flex justify-content-center">
               <img
-                src={com.src}
+                src={ciroolaya.src}
                 class="card-img-top w-75 h-75"
-                alt="Compromiso"
+                alt="ciro olaya"
               />
             </div>
 
@@ -155,9 +155,9 @@ import "bootstrap/dist/css/bootstrap.css";
           <div class="card w-75 mb-5">
             <div class="w-100 d-flex justify-content-center">
               <img
-                src={emp.src}
+                src={ciroolaya.src}
                 class="card-img-top w-75 h-75"
-                alt="Compromiso"
+                alt="ciro olaya"
               />
             </div>
             <div class="card-body">
@@ -174,9 +174,9 @@ import "bootstrap/dist/css/bootstrap.css";
           <div class="card w-75 mb-5">
             <div class="w-100 d-flex justify-content-center">
               <img
-                src={sab.src}
+                src={ciroolaya.src}
                 class="card-img-top w-75 h-75"
-                alt="Compromiso"
+                alt="ciro olaya"
               />
             </div>
             <div class="card-body">
